--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 # Server configuration
 server.port=8080
+
+spring.security.enabled=false
+
 # Logging
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
